2016-11-08  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 39857: Completion/Unix/Command/_top: add support for darwin,
	with improvements on linux etc.

2016-11-08  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: Src/utils.c: follow up to 39867: don't need test
	against zero any more.

	* Sebastian: 39869: can transfer ownership of core of array when
	assigning.

	* 39867: Src/utils.c: cast to unsigned char to compare against
	0x7f.

2016-11-07  Peter Stephenson  <p.stephenson@samsung.com>

	*  Felix Neumärker: Completion/Unix/Command/_module: follow
	symbolic links and use _multi_parts for paths.

	* zsh-users/22083: Doc/Zsh/expn.yo: attempt to explain a bit
	better what a "word" is in parameter substitution.

2016-11-07  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 39840: Completion/Unix/Command/_cpio: Declare variable's
	type correctly.

2016-11-07  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 39728: Src/zsh_system.h, Src/Modules/datetime.c: define
	_GNU_SOURCE on Cygwin

	* 39855: Completion/BSD/Command/_jot: new completion

2016-11-07  Frank Terbeck  <ft@bewatermyfriend.org>

	* 39849: Completion/Unix/Command/_tmux: _tmux: Remove
	set-remain-on-exit

2016-11-06  Frank Terbeck  <ft@bewatermyfriend.org>

	* 39847: Util/check-tmux-state: Update helper function name
	pattern

	* 39848: Completion/Unix/Command/_tmux: _tmux: Update options to
	latest tmux

2016-11-05  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted: Completion/compaudit: tweak replacement getent
	to handle /etc/hosts format.

	* Thomas Bereknyei, Mic92: 39831: Completion/compaudit: find
	"getent" by the usual command search, not just /usr/bin/.

	* unposted: Test/A05execution.ztst:  tests for 39839, 39844

	* 39844: Src/loop.c: fix "while" condition as per 39839

	* 39839: Src/loop.c: fix "return" from "if" condition

	* 39838: Src/builtin.c: another missing unqueue_signals()

2016-11-04  Oliver Kiddle  <opk@zsh.org>
