@@ -5,6 +5,9 @@
 
 2016-11-08  Peter Stephenson  <p.stephenson@samsung.com>
 
+	* Src/builtin.c, Test/C03traps.ztst: ensure exit trap can always
+	run.
+
 	* unposted: Src/utils.c: follow up to 39867: don't need test
 	against zero any more.
 
